--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Ron Forbes",
   "license": "ISC",
   "dependencies": {
-    "firebase-admin": "^5.13.1"
+    "firebase-admin": "^5.13.1",
+    "socket.io": "^2.1.1"
   }
 }
